--- a/package.json
+++ b/package.json
@@ -4,13 +4,34 @@
   "description": "Application for the selfie wall.",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node_modules/.bin/gulp build --env production"
   },
-  "author": "Sam Verschueren",
+  "author": {
+      "name": "Sam Verschueren",
+      "email": "sam.verschueren@gmail.com"
+  },
   "license": "MIT",
   "devDependencies": {
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-bower": "0.0.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-header": "^1.2.2",
+    "gulp-html-replace": "^1.5.1",
+    "gulp-htmlmin": "^1.1.3",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
-    "gulp-watch": "^4.2.4"
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.2.4",
+    "lazypipe": "^1.0.1",
+    "lodash": "^3.10.1",
+    "merge2": "^0.3.6",
+    "minimist": "^1.1.3",
+    "moment": "^2.10.6"
   }
 }
